--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,12 @@ body {margin:0;font-family:"Segoe UI",sans-serif;background:#36393f;color:#dcddd
 <script src="/socket.io/socket.io.js"></script>
 <script>
 let socket;
+let room="general";
+let typing=false;
+let typingUsers=[];
+let msgId=0;
+const colors={};
+const reactions={};
 
 async function login(){
   const res = await fetch("/login",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({username:user.value,password:pass.value})});
@@ -93,9 +99,9 @@ async function register(){
 async function startChat(){
   document.getElementById("login").style.display="none";
   document.getElementById("chat").style.display="block";
-  document.getElementById("profile").style.display="block";
   socket=io();
   socket.on("connect_error",err=>{alert("Socket auth failed.");console.error(err);});
+  setupSocketListeners();
   joinRoom("general");
   loadProfile();
 }
@@ -110,6 +116,7 @@ async function loadProfile(){
   age.value=p.age||"";
   gender.value=p.gender||"";
   if(p.avatar)avatarPreview.src=p.avatar;
+  document.getElementById("profile").style.display="block";
 }
 async function saveProfile(){
   const form=new FormData();
@@ -118,23 +125,19 @@ async function saveProfile(){
   form.append("age",age.value);
   form.append("gender",gender.value);
   if(avatar.files[0]) form.append("avatar",avatar.files[0]);
-  await fetch("/profile",{method:"POST",body:form});
-  alert("Profile saved!");
+  const res=await fetch("/profile",{method:"POST",body:form});
+  alert(res.ok?"Profile saved!":"Failed to save profile");
 }
 
 /* ---------------- CHAT ---------------- */
-let room="general";
-let typing=false;
-let typingUsers=[];
-let msgId=0;
-const colors={};
-const reactions={};
-
 function color(name){if(!colors[name]){const c=["#e74c3c","#2ecc71","#3498db","#f1c40f","#9b59b6"];colors[name]=c[Math.floor(Math.random()*c.length)];}return colors[name];}
 
 function joinRoom(r){
   room=r;
   document.getElementById("header").textContent="# "+r;
+  document.getElementById("input").placeholder="Message #"+r;
+  document.querySelectorAll(".channel").forEach(ch=>ch.classList.remove("active"));
+  event.target.classList.add("active");
   document.getElementById("messages").innerHTML="";
   socket.emit("join room",{room,status:"Online"});
 }
@@ -152,54 +155,56 @@ document.getElementById("input").addEventListener("keydown",e=>{
   }
 });
 
-/* ---------------- SOCKET EVENTS ---------------- */
-socket?.on("chat message",msg=>{
-  const li=document.createElement("li");
-  li.dataset.id=msgId++;
-  if(msg.user===user.value) li.classList.add("self");
-  const av=document.createElement("div");
-  av.className="avatar";
-  av.style.background=color(msg.user);
-  const bubble=document.createElement("div");
-  bubble.className="bubble"+(msg.user===user.value?" self":"");
-  bubble.textContent=msg.user+": "+msg.text;
-  const react=document.createElement("button");
-  react.className="reaction-btn";
-  react.textContent="😀";
-  react.onclick=()=>socket.emit("reaction",{room,messageId:li.dataset.id,emoji:"😀"});
-  li.append(av,bubble,react);
-  document.getElementById("messages").appendChild(li);
-  li.scrollIntoView();
-});
-
-socket?.on("reaction",({user,messageId,emoji})=>{
-  if(!reactions[messageId])reactions[messageId]={};
-  reactions[messageId][user]=emoji;
-  const li=[...document.querySelectorAll(".messages li")].find(m=>m.dataset.id==messageId);
-  if(!li)return;
-  let span=li.querySelector(".reactions");
-  if(!span){span=document.createElement("span");span.className="reactions";li.appendChild(span);}
-  const counts={};
-  Object.values(reactions[messageId]).forEach(e=>counts[e]=(counts[e]||0)+1);
-  span.textContent=Object.entries(counts).map(([e,c])=>`${e} ${c}`).join(" ");
-});
-
-socket?.on("typing",u=>{if(!typingUsers.includes(u))typingUsers.push(u);document.getElementById("typing").textContent=typingUsers.join(", ")+" typing...";});
-socket?.on("stop typing",u=>{typingUsers=typingUsers.filter(x=>x!==u);document.getElementById("typing").textContent=typingUsers.length?typingUsers.join(", ")+" typing...":"";});
-
-socket?.on("user list",users=>{
-  const ul=document.getElementById("users"); ul.innerHTML="";
-  users.forEach(u=>{
+/* ---------------- SOCKET EVENTS SETUP ---------------- */
+function setupSocketListeners(){
+  socket.on("chat message",msg=>{
     const li=document.createElement("li");
+    li.dataset.id=msgId++;
+    if(msg.user===user.value) li.classList.add("self");
     const av=document.createElement("div");
-    av.className="avatar"; av.style.width="18px"; av.style.height="18px"; av.style.background=color(u.name);
-    const dot=document.createElement("span");
-    dot.className="status-dot";
-    dot.style.background=u.status==="Online"?"green":u.status==="Away"?"yellow":u.status==="Busy"?"red":u.status==="Idle"?"gray":"blue";
-    li.append(av,dot,document.createTextNode(`${u.name} (${u.role})`));
-    ul.appendChild(li);
+    av.className="avatar";
+    av.style.background=color(msg.user);
+    const bubble=document.createElement("div");
+    bubble.className="bubble"+(msg.user===user.value?" self":"");
+    bubble.textContent=msg.user+": "+msg.text;
+    const react=document.createElement("button");
+    react.className="reaction-btn";
+    react.textContent="😀";
+    react.onclick=()=>socket.emit("reaction",{room,messageId:li.dataset.id,emoji:"😀"});
+    li.append(av,bubble,react);
+    document.getElementById("messages").appendChild(li);
+    li.scrollIntoView();
   });
-});
+
+  socket.on("reaction",({user,messageId,emoji})=>{
+    if(!reactions[messageId])reactions[messageId]={};
+    reactions[messageId][user]=emoji;
+    const li=[...document.querySelectorAll(".messages li")].find(m=>m.dataset.id==messageId);
+    if(!li)return;
+    let span=li.querySelector(".reactions");
+    if(!span){span=document.createElement("span");span.className="reactions";li.appendChild(span);}
+    const counts={};
+    Object.values(reactions[messageId]).forEach(e=>counts[e]=(counts[e]||0)+1);
+    span.textContent=Object.entries(counts).map(([e,c])=>`${e} ${c}`).join(" ");
+  });
+
+  socket.on("typing",u=>{if(!typingUsers.includes(u))typingUsers.push(u);document.getElementById("typing").textContent=typingUsers.join(", ")+" typing...";});
+  socket.on("stop typing",u=>{typingUsers=typingUsers.filter(x=>x!==u);document.getElementById("typing").textContent=typingUsers.length?typingUsers.join(", ")+" typing...":"";});
+
+  socket.on("user list",users=>{
+    const ul=document.getElementById("users"); ul.innerHTML="";
+    users.forEach(u=>{
+      const li=document.createElement("li");
+      const av=document.createElement("div");
+      av.className="avatar"; av.style.width="18px"; av.style.height="18px"; av.style.background=color(u.name);
+      const dot=document.createElement("span");
+      dot.className="status-dot";
+      dot.style.background=u.status==="Online"?"green":u.status==="Away"?"yellow":u.status==="Busy"?"red":u.status==="Idle"?"gray":"blue";
+      li.append(av,dot,document.createTextNode(`${u.name} (${u.role})`));
+      ul.appendChild(li);
+    });
+  });
+}
 </script>
 </body>
 </html>
