--- a/public/index.html
+++ b/public/index.html
@@ -301,11 +301,20 @@
             <div class="row">
               <div class="field" style="flex:1;">
                 <label>Age</label>
-                <input id="editAge" type="number" min="0" max="120">
+               <input id="editAge" type="number" min="18" max="120" placeholder="18+">
               </div>
               <div class="field" style="flex:1;">
                 <label>Gender</label>
-                <input id="editGender">
+                <select id="editGender">
+  <option value="">Prefer not to say</option>
+  <option value="Male">Male</option>
+  <option value="Female">Female</option>
+  <option value="Non-binary">Non-binary</option>
+  <option value="Transgender">Transgender</option>
+  <option value="Genderfluid">Genderfluid</option>
+  <option value="Other">Other</option>
+</select>
+
               </div>
             </div>
 
