--- a/public/index.html
+++ b/public/index.html
@@ -88,12 +88,12 @@
            <div class="roomTitle"><span id="roomTitle">main</span></div>
           </div>
 
-          <div class="row" style="align-items:center; gap:10px;">
+            <div class="row" style="align-items:center; gap:10px;">
             <div class="searchWrap">
               <input id="searchInput" placeholder="Search messages...">
             </div>
-            <button class="iconBtn" id="dmToggleBtn" type="button" title="Direct messages">💬</button>
-            <button class="iconBtn" id="groupDmToggleBtn" type="button" title="Group chats">👪</button>
+            <button class="iconBtn withBadge" id="dmToggleBtn" type="button" title="Direct messages">💬<span class="notifDot" id="dmBadgeDot" title="New DMs"></span></button>
+            <button class="iconBtn withBadge" id="groupDmToggleBtn" type="button" title="Group chats">👪<span class="notifDot right" id="groupDmBadgeDot" title="New group DMs"></span></button>
             <button class="iconBtn mobOnly" id="openMembersBtn" type="button" title="Members">👥</button>
           </div>
         </div>
@@ -190,7 +190,7 @@
       <div class="tabs" id="tabs">
         <div class="tab active" data-tab="info" id="tabInfo">Info</div>
         <div class="tab" data-tab="about" id="tabAbout">About</div>
-        <div class="tab" data-tab="media" id="tabMedia">Media</div>
+        <div class="tab" data-tab="customize" id="tabCustomize">Customization</div>
         <div class="tab" data-tab="moderation" id="tabModeration" style="display:none;">Moderation</div>
       </div>
 
@@ -302,10 +302,30 @@
         </div>
       </div>
 
-      <div id="viewMedia" style="display:none;">
-        <div class="sectionTitle">Media</div>
+      <div id="viewCustomize" style="display:none;">
+        <div class="sectionTitle">Customization</div>
         <div class="panelBox">
-          <div class="small">Nothing shared yet. Use DMs to swap files or links.</div>
+          <div class="field">
+            <label>Direct message badge color</label>
+            <div class="colorInputRow">
+              <input id="directBadgeColor" type="color" aria-label="Direct message badge color">
+              <input id="directBadgeColorText" type="text" placeholder="#ed4245 or red" aria-label="Direct message badge color text">
+            </div>
+          </div>
+
+          <div class="field">
+            <label>Group DM badge color</label>
+            <div class="colorInputRow">
+              <input id="groupBadgeColor" type="color" aria-label="Group DM badge color">
+              <input id="groupBadgeColorText" type="text" placeholder="#5865f2 or blue" aria-label="Group DM badge color text">
+            </div>
+          </div>
+
+          <div class="row" style="margin-top:6px;">
+            <button class="btn" id="saveBadgePrefsBtn" type="button">Save badge colors</button>
+          </div>
+
+          <div class="msgline" id="customizeMsg"></div>
         </div>
       </div>
 
