Update status labels and presence ordering

--- a/public/index.html
+++ b/public/index.html
@@ -70,13 +70,13 @@
             <option>Online</option>
             <option>Away</option>
             <option>Busy</option>
-            <option>Do Not Disturb</option>
+            <option>DnD</option>
             <option>Idle</option>
             <option>Gaming</option>
-            <option>Listening to Music</option>
+            <option>Music</option>
             <option>Working</option>
-            <option>Looking to Chat</option>
-            <option>Invisible</option>
+            <option>Chatting</option>
+            <option>Lurking</option>
           </select>
         </div>
       </aside>
